# task

./: CMakeLists.txt  README.md  main.cpp  rectify.cpp  rectify.h
videos/: README
